@@ -4,14 +4,21 @@
  * (c) 2015 Prof Dr Andreas Mueller, Hochschule Rapperswil
  */
 #include <InstrumentComponentTable.h>
+#include <AstroDebug.h>
 
 namespace astro {
 namespace discover {
 
+/**
+ * \brief get the table name
+ */
 std::string	InstrumentComponentTableAdapter::tablename() {
 	return std::string("instrumentcomponents");
 }
 
+/**
+ * \brief Create the database table for InstrumentComponents
+ */
 std::string	InstrumentComponentTableAdapter::createstatement() {
 	return std::string(
 		"create table instrumentcomponents (\n"
@@ -28,17 +35,25 @@ std::string	InstrumentComponentTableAdapter::createstatement() {
 	);
 }
 
+/**
+ * \brief Convert a Row into an object
+ */
 InstrumentComponentRecord	InstrumentComponentTableAdapter::row_to_object(
 					int objectid, const Row& row) {
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "constructing object %d", objectid);
 	InstrumentComponentRecord	record(objectid);
 	record.name(row["name"]->stringValue());
 	record.type((InstrumentComponent::Type)row["type"]->intValue());
 	record.index(row["idx"]->intValue());
 	record.servicename(row["servicename"]->stringValue());
 	record.deviceurl(row["deviceurl"]->stringValue());
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "object created");
 	return record;
 }
 
+/**
+ * \brief Convert an object to an update specification
+ */
 UpdateSpec	InstrumentComponentTableAdapter::object_to_updatespec(
 			const InstrumentComponentRecord& component) {
 	UpdateSpec	spec;
