@@ -16,6 +16,9 @@ namespace discover {
 // Instrument implementation
 //////////////////////////////////////////////////////////////////////
 
+/**
+ * \brief Auxiliary function to add components to a list
+ */
 void	Instrument::add(std::list<InstrumentComponent>& l,
 		InstrumentComponent::Type type) {
 	int	n = nComponentsOfType(type);
@@ -24,6 +27,9 @@ void	Instrument::add(std::list<InstrumentComponent>& l,
 	}
 }
 
+/**
+ * \brief Build a list of all components of an instrument
+ */
 std::list<InstrumentComponent>	Instrument::list() {
 	std::list<InstrumentComponent>	result;
 	add(result, InstrumentComponent::CCD);
@@ -35,6 +41,9 @@ std::list<InstrumentComponent>	Instrument::list() {
 	return result;
 }
 
+/**
+ * \brief Build a list of all components of a given type
+ */
 std::list<InstrumentComponent>	Instrument::list(InstrumentComponent::Type type) {
 	std::list<InstrumentComponent>	result;
 	add(result, type);
@@ -49,10 +58,17 @@ class InstrumentBackendImpl {
 	static astro::persistence::Database	database;
 	static InstrumentComponentTablePtr	table;
 	static void	setup() {
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "setup of with default db");
 		astro::config::ConfigurationPtr	config
 			= astro::config::Configuration::get();
 		database = config->database();
 		debug(LOG_DEBUG, DEBUG_LOG, 0, "create table");
+		table = InstrumentComponentTablePtr(
+				new InstrumentComponentTable(database));
+	}
+	static void	setupdb(Database db) {
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "setup with separate db");
+		database = db;
 		table = InstrumentComponentTablePtr(
 				new InstrumentComponentTable(database));
 	}
@@ -61,54 +77,157 @@ public:
 	InstrumentBackendImpl() {
 		std::call_once(ready, setup);
 	}
-	int	idfromkey(const InstrumentComponentKey& key);
+	InstrumentBackendImpl(persistence::Database database) {
+		std::call_once(ready, setupdb, database);
+	}
+	long	idfromkey(const InstrumentComponentKey& key);
+	long	idfromkey(const std::string& name,
+			InstrumentComponent::Type type, int index);
 	int	nComponentsOfType(const std::string& name,
 			InstrumentComponent::Type type);
-	int	add(const std::string& name,
-			const InstrumentComponent& component);
-	void	update(const std::string& name,
-			const InstrumentComponent& component);
+	int	add(const InstrumentComponent& component);
+	void	update(const InstrumentComponent& component);
 	void	remove(const std::string& name,
 			InstrumentComponent::Type type, int index);
 	void	remove(const InstrumentComponentKey& key);
 	std::list<std::string>	names();
 	InstrumentPtr	get(const std::string& name);
+	InstrumentComponent	get(const std::string& name, 
+			InstrumentComponent::Type type, int index);
 };
 
 astro::persistence::Database	InstrumentBackendImpl::database;
 InstrumentComponentTablePtr	InstrumentBackendImpl::table;
 std::once_flag	InstrumentBackendImpl::ready;
 
+/**
+ * \brief Count the number of components of a given type in an instrument
+ */
 int	InstrumentBackendImpl::nComponentsOfType(const std::string& name,
 			InstrumentComponent::Type type) {
-	return 0;
+	std::string	query(	"select count(*) "
+				"from instrumentcomponents "
+				"where name = ? and type = ?");
+	StatementPtr	statement = database->statement(query);
+	statement->bind(0, name);
+	statement->bind(1, type);
+	Result	res = statement->result();
+	return std::stoi(res.front()[0]->stringValue());
 }
 
-int	InstrumentBackendImpl::add(const std::string& name,
-			const InstrumentComponent& component) {
-	return 0;
+/**
+ * \brief Add a component to an instrument of a given name
+ */
+int	InstrumentBackendImpl::add(const InstrumentComponent& component) {
+	InstrumentComponentRecord	record(component);
+	record.name(component.name());
+	record.index(nComponentsOfType(component.name(), component.type()));
+	long	id = table->add(record);
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "new entry with id = %ld", id);
+	return record.index();;
 }
 
-void	InstrumentBackendImpl::update(const std::string& name,
-			const InstrumentComponent& component) {
+/**
+ * \brief Update a component
+ */
+void	InstrumentBackendImpl::update(const InstrumentComponent& component) {
+	long	objectid = idfromkey(component.name(), component.type(),
+				component.index());
+	InstrumentComponentInfo	info(component);
+	table->update(objectid, info);
 }
 
+/**
+ * \brief Remove a component
+ */
 void	InstrumentBackendImpl::remove(const std::string& name,
 			InstrumentComponent::Type type, int index) {
-	
+	int	n = nComponentsOfType(name, type);
+
+	// remove the component
+	long	objectid = idfromkey(name, type, index);
+	table->remove(objectid);
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "object %d with index=%d removed",
+		objectid, index);
+
+	// renumber all the other components
+	std::string	query(	"update instrumentcomponents "
+				"set idx = idx - 1 "
+				"where name = ? "
+				"  and type = ? "
+				"  and idx = ? ");
+	for (int i = index + 1; i < n; i++) {
+		StatementPtr	statement = database->statement(query);
+		statement->bind(0, name);
+		statement->bind(1, type);
+		statement->bind(2, i);
+		statement->execute();
+	}
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "renumber comleted");
 }
 
+/**
+ * \brief Get a list of the names of available instruments
+ */
 std::list<std::string>	InstrumentBackendImpl::names() {
 	std::list<std::string>	result;
 	std::string	query(	"select distinct name "
 				"from instrumentcomponents "
 				"order by 1 asc;");
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "name query: %s", query.c_str());
 	astro::persistence::Result	r = database->query(query);
 	astro::persistence::Result::iterator	i;
 	for (i = r.begin(); i != r.end(); i++) { 
-		result.push_back((*i)[0]->stringValue());
+		std::string	nm = (*i)[0]->stringValue();
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "found instrument '%s'",
+			nm.c_str());
+		result.push_back(nm);
 	}
 	return result;
+}
+
+/**
+ * \brief Get the ide of an object from a key
+ */
+long	InstrumentBackendImpl::idfromkey(const InstrumentComponentKey& key) {
+	return idfromkey(key.name(), key.type(), key.index());
+}
+
+/**
+ * \brief Retrieve the object id from name, type and index of a component
+ */
+long	InstrumentBackendImpl::idfromkey(const std::string& name,
+		InstrumentComponent::Type type, int index) {
+	std::string	query(	"select id "
+				"from instrumentcomponents "
+				"where name = ? "
+				"  and type = ? "
+				"  and idx = ?");
+	StatementPtr	statement = database->statement(query);
+	statement->bind(0, name);
+	statement->bind(1, type);
+	statement->bind(2, index);
+	Result	res = statement->result();
+	long	objectid = res.front()[0]->intValue();
+	if (objectid < 0) {
+		debug(LOG_ERR, DEBUG_LOG, 0, "instrument %s: no matching "
+			"component type=%d, index=%d",
+			name.c_str(), type, index);
+		throw std::runtime_error("no matching instrument component");
+	}
+	return objectid;
+}
+
+/**
+ * \brief Get the component
+ */
+InstrumentComponent	InstrumentBackendImpl::get(const std::string& name, 
+				InstrumentComponent::Type type, int index) {
+	long	i = idfromkey(name, type, index);
+	InstrumentComponentInfo	info = table->byid(i);
+	InstrumentComponent	component(info, info.servicename(),
+					info.deviceurl());
+	return component;
 }
 
 //////////////////////////////////////////////////////////////////////
@@ -123,13 +242,17 @@ public:
 		return backend.nComponentsOfType(name(), type);
 	}
 	virtual int	add(const InstrumentComponent& component) {
-		return backend.add(name(), component);
+		return backend.add(component);
 	}
 	virtual void	update(const InstrumentComponent& component) {
-		backend.update(name(), component);
+		backend.update(component);
 	}
 	virtual void	remove(InstrumentComponent::Type type, int index) {
 		backend.remove(name(), type, index);
+	}
+	virtual InstrumentComponent	get(InstrumentComponent::Type type,
+		int index) {
+		return backend.get(name(), type, index);
 	}
 };
 
@@ -140,6 +263,13 @@ InstrumentPtr	InstrumentBackendImpl::get(const std::string& name) {
 //////////////////////////////////////////////////////////////////////
 // Instrument Backend
 //////////////////////////////////////////////////////////////////////
+
+InstrumentBackend::InstrumentBackend() {
+}
+
+InstrumentBackend::InstrumentBackend(persistence::Database database) {
+	InstrumentBackendImpl	backend(database);
+}
 
 std::list<std::string>	InstrumentBackend::names() {
 	InstrumentBackendImpl	backend;
