@@ -8,6 +8,7 @@
 #include <cppunit/extensions/HelperMacros.h>
 #include <AstroDebug.h>
 #include <AstroConfig.h>
+#include <AstroFormat.h>
 #include <ServiceDiscovery.h>
 #include <InstrumentComponentTable.h>
 
@@ -24,11 +25,13 @@ public:
 	void	setUp();
 	void	tearDown();
 	void	testInstrumentComponentTable();
+	void	testInstrumentBackend();
 	void	testInstrumentComponent();
 	//void	testXXX();
 
 	CPPUNIT_TEST_SUITE(InstrumentTest);
 	CPPUNIT_TEST(testInstrumentComponentTable);
+	CPPUNIT_TEST(testInstrumentBackend);
 	CPPUNIT_TEST(testInstrumentComponent);
 	//CPPUNIT_TEST(testXXX);
 	CPPUNIT_TEST_SUITE_END();
@@ -47,18 +50,89 @@ void	InstrumentTest::testInstrumentComponentTable() {
 	Database	database = DatabaseFactory::get(dbfilename);
 
 	discover::InstrumentComponentTable	table(database);
-	discover::InstrumentComponentKey	key("INSTRUMENT", discover::InstrumentComponentKey::CCD, 0);
-	discover::InstrumentComponent	instrument(key, "blubber", "ccd:sx/1-2-3/0");
-	discover::InstrumentComponentInfo	info(instrument);
-	discover::InstrumentComponentRecord	record(instrument);
-	table.add(record);
+	std::string	query("delete from instrumentcomponents;");
+	database->query(query);
+	std::string	names[2] = { "INSTRUMENT", "TELESCOPE" };
+
+	for (int j = 0; j < 2; j++) {
+		for (int i = 0; i < 5; i++) {
+			discover::InstrumentComponentKey	key(names[j],
+				discover::InstrumentComponentKey::CCD, i);
+			discover::InstrumentComponent	component(key, "blubber",
+				stringprintf("ccd:sx/1-2-3/%d", i));
+			discover::InstrumentComponentRecord	record(component);
+
+			table.add(record);
+		}
+		for (int i = 0; i < 5; i++) {
+			discover::InstrumentComponentKey	key(names[j],
+				discover::InstrumentComponentKey::Cooler, i);
+			discover::InstrumentComponent	component(key, "blubber",
+				stringprintf("cooler:sx/1-2-3/%d", i));
+			discover::InstrumentComponentRecord	record(component);
+
+			table.add(record);
+		}
+	}
 
 	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrumentComponentTable() end");
 }
 
-void	InstrumentTest::testInstrumentComponent() {
-	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrument() begin");
+void	InstrumentTest::testInstrumentBackend() {
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrumentBackend() begin");
 	Database	database = DatabaseFactory::get(dbfilename);
+	discover::InstrumentBackend	backend(database);
+	std::list<std::string>	l = backend.names();
+	CPPUNIT_ASSERT(l.size() == 2);
+
+	discover::InstrumentPtr	instrument = backend.get("INSTRUMENT");
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::CCD) == 5);
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::GuiderCCD) == 0);
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::Cooler) == 5);
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::GuiderPort) == 0);
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::Focuser) == 0);
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::AdaptiveOptics) == 0);
+
+	discover::InstrumentComponentKey	key(instrument->name(), discover::InstrumentComponentKey::GuiderPort);
+	discover::InstrumentComponent	component(key, "mount", "guiderport:guiderport/0");
+	instrument->add(component);
+	component.deviceurl("guiderport:guiderport/1");
+	instrument->add(component);
+	CPPUNIT_ASSERT(instrument->nComponentsOfType(discover::InstrumentComponentKey::GuiderPort) == 2);
+
+	discover::InstrumentComponent	component2 = instrument->get(discover::InstrumentComponentKey::GuiderPort, 1);
+	CPPUNIT_ASSERT(component2.name() == "INSTRUMENT");
+	CPPUNIT_ASSERT(component2.type() == discover::InstrumentComponentKey::GuiderPort);
+	CPPUNIT_ASSERT(component2.index() == 1);
+	CPPUNIT_ASSERT(component2.servicename() == "mount");
+	CPPUNIT_ASSERT(component2.deviceurl() == "guiderport:guiderport/1");
+
+	component2.servicename("cgepro");
+	instrument->update(component2);
+
+	discover::InstrumentComponent	component3 = instrument->get(discover::InstrumentComponentKey::GuiderPort, 1);
+
+	CPPUNIT_ASSERT(component3.servicename() == "cgepro");
+
+	instrument->remove(discover::InstrumentComponent::CCD, 1);
+	instrument->remove(discover::InstrumentComponent::CCD, 1);
+
+	discover::InstrumentComponent	component4 = instrument->get(discover::InstrumentComponentKey::CCD, 2);
+	CPPUNIT_ASSERT(component4.name() == "INSTRUMENT");
+	CPPUNIT_ASSERT(component4.type() == discover::InstrumentComponentKey::CCD);
+	CPPUNIT_ASSERT(component4.index() == 2);
+	CPPUNIT_ASSERT(component4.servicename() == "blubber");
+	CPPUNIT_ASSERT(component4.deviceurl() == "ccd:sx/1-2-3/4");
+	
+
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrumentBackend() end");
+}
+
+
+void	InstrumentTest::testInstrumentComponent() {
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrumentComponent() begin");
+	Database	database = DatabaseFactory::get(dbfilename);
+
 
 #if 0
 	// create an instrument
@@ -117,7 +191,7 @@ void	InstrumentTest::testInstrumentComponent() {
 	CPPUNIT_ASSERT(instrument->unit(DeviceName::Ccd) == 5);
 #endif
 	
-	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrument() end");
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "testInstrumentComponent() end");
 }
 
 #if 0
